# ts

./: .env  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  dgpu-training.py  main.py  pyproject.toml  settings.ini
docs/: statsmodels.ipynb
nbs/: nbdev.yml  sidebar.yml
nbs/benchmarks/: benchmark.classification.ipynb  statsforecast.ipynb
nbs/classifications/: classification.ann.ipynb  classification.cnnclassifer.ipynb
nbs/clustering/: Untitled.ipynb  clustering.ipynb  motifts-enchanced.ipynb  motifts.ipynb
nbs/commons/: commons.loss.ipynb
nbs/deepdive/: categorical forecasting.ipynb
nbs/exp/: TODO.md
nbs/models/: model.dlinear_robust.ipynb  model.mlp.ipynb  model.nbeats.ipynb  model.neuralprophet.ipynb  model.sdm_trend_forecaster.ipynb  model.tide.ipynb
nbs/pipeline/: 00.pre-process.ipynb  01.clustering.ipynb  02.training.ipynb  03.inference-preprocess.ipynb  03.post-processing.ipynb  04.inference.ipynb  05.post-processing.ipynb  nb-flow.ipynb
nbs/pipeline/executed/: 00.pre-process.ipynb  03.inference-preprocess.ipynb  03.post-processing.ipynb  04.inference.ipynb  05.post-processing.ipynb
nbs/preprocessing/: Untitled.ipynb
nbs/src/: benchmark.classification.ipynb  classes.json  classification.ann.ipynb  classification.cnn.ipynb  classification.cnnclassifer.ipynb  classification.lstm.ipynb  classification.mlclassifier.ipynb  classification.process.ipynb  commons.plot.ipynb  commons.stats.ipynb  init.ipynb  model.dlinear.ipynb  model.dlinear_robust.ipynb  model.mlp.ipynb  model.nbeats.ipynb  model.tide.ipynb  plot_forecast.py  preprocess.dataloader.ipynb  preprocess.feature_extraction.ipynb  transfer_learning.ipynb  tsfeature.eda.ipynb  tsfeatures.stats.ipynb  utils.benchmark.ipynb  utils.ipynb  utils.plot.ipynb
nbs/stats/: stats.dynamic_thresholds.ipynb
nbs/training/: training.nbeats.ipynb
nbs/tsfeatures/: tsfeatures.stats.ipynb
nbs/utils/: preprocess.bigdata.dataloader.ipynb  preprocess.dataloader.ipynb  utils.benchmark.ipynb  utils.ipynb
papers/: Deep Time Series Models.ipynb
ts/: .gitignore  LICENSE  Makefile  README.md  Untitled.ipynb  _modidx.py  pyproject.toml  setup.cfg  setup.py  utils.py
ts/.setup_scripts/: jupyter_tools.sh
ts/benchmark/: cnn_classification.py  tsdataset.py
ts/classification/: cnnclassifer.py  mlclassifier.py  pre_process.py  pyproject.toml
ts/commons/: loss.py  plot_forecast.py  stats.py
ts/model/: nbeats.py  sdm_trend_forecaster.py
ts/models/: dlinear.py  fft.py  ltsf.py  nbeats.py  nlinear.py
ts/notebooks/: README.md
ts/notebooks/experiments/: statsforecast.ipynb
ts/notebooks/lab/: README.md  Stationarization.ipynb  compare-algo.ipynb
ts/notebooks/lab/classification/: Untitled.ipynb  transformer-based.ipynb
ts/notebooks/learning/: Untitled.ipynb
ts/notebooks/learning/mlforecastalgo/: init.ipynb
ts/notebooks/learning/neuralforecastalgo/: init.ipynb
ts/notebooks/learning/statsalgo/: Conformal Prediction.ipynb  Volatility forecasting.ipynb  auto.ipynb  init.ipynb  models.md
ts/notebooks/losses/: losses.ipynb
ts/preprocess/: dataloader.py
ts/preprocess/bigdata/: dataloader.py
ts/src/: README.md
ts/src/ts/: __init__.py
ts/stats/: dynamic_thresholds.py
ts/tests/: test_all.py
ts/train/: nbeats.py
ts/tsfeatures/: image.py  seasonal.py  stats.py  ts2image.py
ts/utils/: data.py  plot.py  plot_forecast.py
