[project]
name = "ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasetsforecast>=1.0.0",
    "fastparquet>=2024.11.0",
    "neuralforecast>=3.0.0",
    "pyts>=0.13.0",
    "scikit-learn>=1.6.1",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "utilsforecast>=0.2.12",
]

[project.optional-dependencies]
seaborn = [
    "streamlit>=1.43.1",
    "tensorboard>=2.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "ts",
]

[tool.uv.sources]
ts = { workspace = true }
