[project]
name = "autots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasetsforecast==0.0.8",
    "fastparquet>=2024.11.0",
    "lightning>=2.5.0.post0",
    "metaflow>=2.15.10",
    "neuralforecast>=3.0.0",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "plotly>=6.0.0",
    "pyts>=0.13.0",
    "scikit-learn>=1.6.1",
    "sktime>=0.36.0",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tslearn>=0.6.3",
    "utilsforecast>=0.2.12",
    "wandb>=0.19.8",
]

[project.optional-dependencies]
seaborn = [
    "streamlit>=1.43.1",
    "tensorboard>=2.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-ai[all]>=2.29.1",
    "jupyterlab>=4.3.5",
    "jupyterlab-git>=0.51.0",
    "langchain-ollama>=0.2.3",
    "matplotlib>=3.10.1",
    "mito-ai>=0.1.17",
    "nbdev>=2.3.35",
    "neuralprophet>=0.9.0",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ts"]  # Specify the package(s) you want to include
