[project]
name = "ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pranav Jha", email = "pranavjha1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ts = "ts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
