[project]
name = "classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido==0.2.1",
    "lightning>=2.5.0.post0",
    "pycaret[full]>=3.0.0",
    "streamlit>=1.43.0",
    "sweetviz>=2.3.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
]
